fix: PC版CTA高さをナビと同じ88pxに調整

--- a/index.html
+++ b/index.html
@@ -2958,8 +2958,8 @@
     @media (min-width: 768px) {
       .urgency-banner {
         z-index: 900;
-        padding: 16px 24px;
-        min-height: 52px;
+        padding: 24px;
+        min-height: 88px;
       }
     }
 
